# gleam

./: .gitignore  README.md  pyproject.toml
docs/: report.md
outputs/report/: aggregates.csv  aggregates.md  aggregates.tex  test_full.csv
resources/shaders/phong/: phong.frag  phong.vert
scripts/: dump_raw_generator.py  train_dgx.sh  verify_env.py
src/gleam/: cli.py  config.py
src/gleam/data/: dataset.py  features.py  generate.py  sampling.py  splits.py
src/gleam/eval/: metrics.py  render_single.py  report.py  runner.py
src/gleam/models/: conditioner.py  discriminator.py  generator.py
src/gleam/renderer/: base.py  gl_renderer.py  mesh.py  neural_renderer.py
src/gleam/training/: ema.py  losses.py  trainer.py
src/gleam/utils/: logging.py
